# Mr-Data-Structure

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
bench-engine/: Cargo.toml
bench-engine/src/: lib.rs
bench-engine/src/structures/: avl.rs  bst.rs  conformance.rs  dyn_array.rs  dyn_array_str.rs  hash_set.rs  hash_set_str.rs  linked_list.rs  mod.rs  sorted_array.rs
bench-engine/tests/: proptest_avl.rs  proptest_bst.rs  proptest_linked_list.rs  proptest_membership.rs  proptest_sorted_array.rs
conformance/: corpus-avl.txt  corpus-bst.txt  corpus-ll.txt  corpus-sarr.txt  corpus-str.txt  corpus.txt
docs/: PLAN.md
docs/plans/: drifting-juggling-clarke.md
scripts/: verify-browser.mjs
src/: App.tsx
src/bench/: BenchEngine.ts  engine.worker.ts  fit.test.ts  fit.ts  measure.test.ts  measure.ts  methodology.test.ts  sweep.test.ts  sweep.ts  wasmBenchEngine.ts
src/data/: csv.test.ts  csv.ts  dataset.ts  detect.test.ts  detect.ts  generators.test.ts  generators.ts  import.test.ts  import.ts  index.ts  json.ts  marshal.test.ts  marshal.ts  rng.ts  table.ts
src/structures/: avl.test.ts  avl.ts  bst.test.ts  bst.ts  conformance-avl.test.ts  conformance-bst.test.ts  conformance-ll.test.ts  conformance-sarr.test.ts  conformance-str.test.ts  conformance.test.ts  dynArray.test.ts  dynArray.ts  dynArrayStr.test.ts  dynArrayStr.ts  hashSet.test.ts  hashSet.ts  hashSetStr.test.ts  hashSetStr.ts  heap.test.ts  heap.ts  index.ts  linkedList.test.ts  linkedList.ts  (+4 more)
(+25 files in other folders)
