[package]
name = "bench-engine"
version = "0.1.0"
edition = "2021"
description = "WASM benchmark engine for Mr Data Structure: production-grade data-structure implementations, timed and op-counted at scale."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
